# RLBFF-Replication

./: README.md  main.py  pyproject.toml
.dvc/: config
Experiments/: .gitignore  checkpoint_ids.txt.dvc  data.dvc  exp1-filtering.ipynb  exp1-principle-extract.ipynb  exp1.ipynb  extracted_principles.jsonl.dvc
Experiments/utils/: inference.py  utils.py
