[project]
name = "rlbff-replication"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "dotenv>=0.9.9",
    "dvc>=3.64.2",
    "dvc-s3>=3.2.2",
    "groq>=0.37.1",
    "ipykernel>=7.1.0",
    "numpy>=2.3.5",
    "openai>=2.11.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
]
